// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withReduxCookiePersist should integrate the store using next-redux-wrapper 1`] = `
<div>
  {"isServer":false,"custom":"custom"}
  {"reduxStatus":"init"}
</div>
`;

exports[`withReduxCookiePersist should integrate the store using next-redux-wrapper 2`] = `
<div>
  {"isServer":false,"custom":"custom"}
  {"reduxStatus":"foo"}
</div>
`;

exports[`withReduxCookiePersist should persist actions dispatched during getInitialProps to cookies 1`] = `
<div>
  {"isServer":false,"custom":"custom"}
  {"reduxStatus":"foo"}
</div>
`;
